MS-2: Чаты
* Доработан функционал обновления чата
