# docs/swagger.json
@@ -70,7 +70,7 @@
                     "200": {
                         "description": "Чат успешно создан",
                         "schema": {
-                            "$ref": "#/definitions/chatsdto.CreateChatResponse"
+                            "$ref": "#/definitions/chatsdto.ChatDTO"
                         }
                     }
                 }
@@ -112,11 +112,56 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Данный роут позволяет удалить чат по его ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Edit chat by id",
+                "operationId": "edit_chat_by_id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID чата",
+                        "name": "chatID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Параметры редактирования чата",
+                        "name": "{object}",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chatsdto.EditChatRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Чат успешно изменен",
+                        "schema": {
+                            "$ref": "#/definitions/chatsdto.ChatDTO"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "chatsdto.Chat": {
+        "chatsdto.ChatDTO": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -141,27 +186,18 @@
                 }
             }
         },
-        "chatsdto.CreateChatResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "owner_id": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
         "chatsdto.DeleteChatResponse": {
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "chatsdto.EditChatRequest": {
+            "type": "object",
+            "properties": {
+                "title": {
                     "type": "string"
                 }
             }
@@ -172,7 +208,7 @@
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/chatsdto.Chat"
+                        "$ref": "#/definitions/chatsdto.ChatDTO"
                     }
                 }
             }
