# internal/api/chats/dto/chatdto.go
@@ -1,0 +1,8 @@
+package chatsdto
+
+type ChatDTO struct {
+	ID        int64  `json:"id"`
+	Title     string `json:"title"`
+	OwnerID   int64  `json:"owner_id"`
+	CreatedAt int64  `json:"created_at"`
+}
