# internal/api/chats/dto/getchats.go
@@ -1,17 +1,10 @@
 package chatsdto
 
-type Chat struct {
-	ID        int64  `json:"id"`
-	Title     string `json:"title"`
-	OwnerID   int64  `json:"owner_id"`
-	CreatedAt int64  `json:"created_at"`
-}
-
 type GetChatsResponse struct {
-	Chats []Chat `json:"items"`
+	Chats []ChatDTO `json:"items"`
 }
 
-func NewGetChatsResponse(chats []Chat) *GetChatsResponse {
+func NewGetChatsResponse(chats []ChatDTO) *GetChatsResponse {
 
 	return &GetChatsResponse{
 		Chats: chats,
