# internal/repositories/chats/dto/chat.go
@@ -1,0 +1,8 @@
+package chatrepositorydto
+
+type ChatDTO struct {
+	ChatID    int64
+	Title     string
+	OwnerID   int64
+	CreatedAt int64
+}
