# internal/repositories/chats/dto/getchatslist.go
@@ -1,17 +1,10 @@
 package chatrepositorydto
 
-type Chat struct {
-	ID        int64
-	Title     string
-	OwnerID   int64
-	CreatedAt int64
-}
-
 type GetChatsListRepositoryResponseDTO struct {
-	Chats []Chat
+	Chats []ChatDTO
 }
 
-func NewGetChatsListRepositoryResponseDTO(chats []Chat) *GetChatsListRepositoryResponseDTO {
+func NewGetChatsListRepositoryResponseDTO(chats []ChatDTO) *GetChatsListRepositoryResponseDTO {
 
 	return &GetChatsListRepositoryResponseDTO{
 		Chats: chats,
