# internal/services/chats/dto/chatdto.go
@@ -1,0 +1,8 @@
+package chatsservicedto
+
+type ChatDTO struct {
+	ChatID    int64
+	Title     string
+	OwnerID   int64
+	CreatedAt int64
+}
